# mesa_tizen

./: Makefile.am  configure.ac
packaging/: mesa.spec
src/egl/: Makefile.am
src/egl/drivers/dri2/: egl_dri2.c  egl_dri2.h  platform_drm.c  platform_tizen.c
src/egl/main/: eglapi.c  egldevice.h  egldisplay.c  egldisplay.h  egllog.c
src/gbm/: Makefile.am  gbm-symbols-check
src/gbm/main/: gbm.c  gbm.h  mesa-gbm.pc.in
